# Open-Script-OS

./: README.md
.codebuddy/memory/: 2026-07-15.md
official style file/: NOTHINGUI1.sty
os-edit-rs/: Cargo.toml
os-edit-rs/src/: ast.rs  error.rs  lexer.rs  value.rs
